# modulEngine

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: BuildAndTest.yml
Core/: CMakeLists.txt  ecsArchitecture.md
Core/CMake/: AddTest.cmake  FetchGoogleTest.cmake
Core/include/modulEngine/Core/: Application.h  Array.h  BTree.h  Ecs.h  Result.h
Core/src/: Application.c  Array.c  CMakeLists.txt  Ecs.c
Core/src/DataStructures/: Array.c  BTree.c
Core/src/ECS/: ComponentStorage.c  ComponentStorage.h  EntityCounter.c  EntityCounter.h
Core/tests/: ArrayTest.cpp  BTreeTest.cpp  CMakeLists.txt  EcsTest.cpp
Graphics/: CMakeLists.txt
Graphics/include/modulEngine/Graphics/: Graphics.h  Window.h
Graphics/src/: CMakeLists.txt  Window.c
